# recommendation-system-v4

./: .gitignore  .prettierignore  README.md  commitlint.config.ts  package-lock.json  package.json  prettier.config.mjs  tsconfig.json
.github/workflows/: ci.yml  playwright.yml
.husky/: commit-msg  pre-commit  pre-push  validate-branch-name.sh  validate-node-version.sh  validate-python-version.sh
apps/api/: .env.example  README.md  index.py  pyproject.toml
apps/api/auth/: dependencies.py  internal.py  jwt.py
apps/api/config/: settings.py
apps/api/db/: index.py
apps/api/retrieval/: queries.py  service.py
apps/api/schemas/env/: env.py
apps/api/schemas/requests/: recommendation.py
apps/api/tests/: conftest.py  test_auth.py  test_contracts.py  test_health.py  test_recommendations.py
apps/web/: .env.example  .gitignore  README.md  eslint.config.mjs  instrumentation-client.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  proxy.ts  sentry.edge.config.ts  sentry.server.config.ts  vitest.config.ts  vitest.setup.ts
apps/web/actions/: login.test.ts  login.ts  logout.test.ts  logout.ts  recommendations.test.ts  recommendations.ts  signup.test.ts  signup.ts  test-helpers.ts  watched.test.ts  watched.ts
apps/web/app/: global-error.tsx  globals.css  layout.tsx  page.test.tsx  page.tsx
apps/web/app/health/: route.ts
apps/web/app/login/: LoginFormSection.tsx  page.test.tsx  page.tsx
apps/web/app/recommendations/: layout.tsx  loading.tsx  page.test.tsx  page.tsx
apps/web/app/shows/: layout.tsx  loading.tsx  page.test.tsx  page.tsx
apps/web/app/signup/: page.test.tsx  page.tsx
apps/web/e2e/: auth.setup.ts  homepage.spec.ts
apps/web/e2e/auth/: guest-redirect.spec.ts  login-guest.spec.ts  logout.spec.ts  session.spec.ts
apps/web/e2e/fixtures/: ci-env.ts  shows.ts  test-user.ts
apps/web/e2e/shows/: browse.spec.ts  show-detail.spec.ts
apps/web/e2e/watched/: toggle.spec.ts
apps/web/lib/api/: recommendations.test.ts  recommendations.ts
apps/web/lib/auth/: get-access-token.ts  map-login-auth-error.test.ts  map-login-auth-error.ts  map-signup-auth-error.ts  require-user.ts  routes.test.ts  routes.ts  validation.ts
apps/web/lib/env/: public.ts  required.ts  server.ts
apps/web/lib/monitoring/: is-sentry-enabled.ts
apps/web/lib/recommendations/: cache.test.ts  cache.ts  fingerprint.test.ts  (+4 more)
scripts/: codegen-contracts.mjs
supabase/: config.toml
supabase/migrations/: 20260708180000_create_shows_and_embeddings.sql  20260708190000_create_user_watched.sql  20260715120000_create_user_recommendations.sql
(+83 files in other folders)
